--- a/Tackle/Pages/TeacherMainMenuView.xaml
+++ b/Tackle/Pages/TeacherMainMenuView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Tackle.Pages.TeacherMainModelView"
+﻿<UserControl x:Class="Tackle.Pages.TeacherMainMenuView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <ProgressBar HorizontalAlignment="Left" Height="10" Margin="128,142,0,0" VerticalAlignment="Top" Width="100"/>
     </Grid>
 </UserControl>
