--- a/Tackle/Pages/StudentMainMenuView.xaml
+++ b/Tackle/Pages/StudentMainMenuView.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Button Content="Button" HorizontalAlignment="Left" Margin="135,84,0,0" VerticalAlignment="Top" Width="75"/>
+
     </Grid>
 </UserControl>
