--- a/Tackle/Pages/StudentMainMenuView.xaml
+++ b/Tackle/Pages/StudentMainMenuView.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl x:Class="Tackle.Pages.StudentMainMenuView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:s="https://github.com/canton7/Stylet"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -7,7 +8,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="900">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="135,84,0,0" VerticalAlignment="Top" Width="75"/>
-
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Command="{s:Action LoadTest}">Load Test Quiz</Button>
+        </StackPanel>
     </Grid>
 </UserControl>
