--- a/Tackle/Pages/QuizScreenView.xaml
+++ b/Tackle/Pages/QuizScreenView.xaml
@@ -23,6 +23,7 @@
         <TextBlock Grid.Row="1" HorizontalAlignment="Center" FontSize="20" Text="{Binding Path=Model.CurrentQuestion}"/>
 
         <TabControl SelectedIndex="{Binding Path=Model.CurrentQuestionType}" Grid.Row="2" BorderThickness="0">
+            <!-- String input -->
             <TabItem TabIndex="0" Width="0">
                 <StackPanel>
                     <TextBlock>Notepad:</TextBlock>
@@ -31,6 +32,7 @@
                     <TextBox Text="{Binding Path=Model.UserInput, Mode=TwoWay}" Height="300"/>
                 </StackPanel>
             </TabItem>
+            <!-- Integer input -->
             <TabItem TabIndex="1" Width="0">
                 <StackPanel>
                     <TextBlock>Notepad:</TextBlock>
@@ -40,8 +42,23 @@
                 </StackPanel>
                 
             </TabItem>
+            <!-- Multiple choice -->
             <TabItem TabIndex="2" Width="0">
-                <Grid Background="DarkGray"/>
+                <!-- ListBox to put each of the multiple choice options as a radio button -->
+                <ListBox ItemsSource="{Binding Path=Model.MultipleChoiceOptions}" SelectedItem="{Binding Path=Model.UserInput}">
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListBoxItem}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                        <RadioButton Content="{Binding }"
+                                     IsChecked="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsSelected}"/>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>
             </TabItem>
             
         </TabControl>
