--- a/Tackle/Pages/TeacherMainMenuView.xaml
+++ b/Tackle/Pages/TeacherMainMenuView.xaml
@@ -6,15 +6,15 @@
              xmlns:s="https://github.com/canton7/Stylet"
              xmlns:local="clr-namespace:Tackle.Pages"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="900">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Command="{s:Action}" Margin="0,0,0,5" FontSize="24">Create Quiz</Button>
-            <Button Command="{s:Action}" Margin="0,0,0,5" FontSize="24">View Draft Quizzes</Button>
-            <Button Command="{s:Action}" Margin="0,0,0,5" FontSize="24">View Public Quizzes</Button>
-            <Button Command="{s:Action}" Margin="0,0,0,5" FontSize="24">Mark Quizzes</Button>
-            <Button Command="{s:Action}" Margin="0,0,0,5" FontSize="24">Manage Classes</Button>
+            <Button Command="{s:Action CreateQuiz}" Margin="0,0,0,5" FontSize="24">Create Quiz</Button>
+            <Button Margin="0,0,0,5" FontSize="24">View Draft Quizzes</Button>
+            <Button Margin="0,0,0,5" FontSize="24">View Currently Set Quizzes</Button>
+            <Button Command="{s:Action ViewPublicQuizzes}" Margin="0,0,0,5" FontSize="24">View Public Quizzes</Button>
+            <Button Margin="0,0,0,5" FontSize="24">Mark Quizzes</Button>
+            <Button Margin="0,0,0,5" FontSize="24">Manage Classes</Button>
         </StackPanel>
-        
     </Grid>
 </UserControl>
