new stuff i guess

--- a/Tackle/Pages/TeacherMainMenuView.xaml
+++ b/Tackle/Pages/TeacherMainMenuView.xaml
@@ -14,7 +14,7 @@
             <Button Margin="0,0,0,5" FontSize="24">View Currently Set Quizzes</Button>
             <Button Command="{s:Action ViewPublicQuizzes}" Margin="0,0,0,5" FontSize="24">View Public Quizzes</Button>
             <Button Margin="0,0,0,5" FontSize="24">Mark Quizzes</Button>
-            <Button Margin="0,0,0,5" FontSize="24">Manage Classes</Button>
+            <Button Margin="0,0,0,5" FontSize="24" Command="{s:Action ManageClasses}">Manage Classes</Button>
         </StackPanel>
     </Grid>
 </UserControl>
